fix(header): fix header z-index elements

--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -72,6 +72,7 @@
     padding: 0 0 55px 0;
     position: relative;
     border-bottom: 3px solid #666;
+    z-index: 11;
     .header-product-image {
         width: 100%;
         height: 100%;
